platform/k8s-apps/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cs301-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/v1/clients
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80
          - path: /api/v1/logs
            pathType: Prefix
            backend:
              service:
                name: log-service
                port:
                  number: 80
